whaterror_macros/tests/ui/hygiene.stderr
error[E0425]: cannot find value `inner` in this scope
 --> $DIR/hygiene.rs:8:17
  |
8 |         let _ = inner;
  |                 ^^^^^ not found in this scope
  |
help: consider importing this function
  |
2 |     use crate::naming_conflicts::inner;
  |

error[E0425]: cannot find value `handle` in this scope
 --> $DIR/hygiene.rs:9:17
  |
9 |         let _ = handle;
  |                 ^^^^^^ not found in this scope
  |
help: consider importing this function
  |
2 |     use crate::naming_conflicts::handle;
  |
